maze.lessons.maze.island.IslandMaze.scala.error
Escaper:13: error: ';' expected but ')' found.
				suitMur ) true;
                                        ^